доработка аутентификации - норм управление пользователями и тд
