# DateTimeService/Areas/Identity/Models/ChangePasswordModel.cs
@@ -1,0 +1,19 @@
+﻿using System;
+using System.Collections.Generic;
+using System.ComponentModel.DataAnnotations;
+using System.Linq;
+using System.Threading.Tasks;
+
+namespace DateTimeService.Areas.Identity.Models
+{
+    public class ChangePasswordModel
+    {
+        [Required(ErrorMessage = "User Name is required")]
+        public string Username { get; set; }
+
+        [Required(ErrorMessage = "Old password is required")]
+        public string OldPassword { get; set; }
+        [Required(ErrorMessage = "New password is required")]
+        public string NewPassword { get; set; }
+    }
+}
