# DateTimeService/Areas/Identity/Models/DeleteModel.cs
@@ -1,0 +1,14 @@
+﻿using System;
+using System.Collections.Generic;
+using System.ComponentModel.DataAnnotations;
+using System.Linq;
+using System.Threading.Tasks;
+
+namespace DateTimeService.Areas.Identity.Models
+{
+    public class DeleteModel
+    {
+        [Required(ErrorMessage = "User Name is required")]
+        public string Username { get; set; }
+    }
+}
