# DateTimeService/Areas/Identity/Models/ModifyRolesModel.cs
@@ -1,0 +1,16 @@
+﻿using System;
+using System.Collections.Generic;
+using System.ComponentModel.DataAnnotations;
+using System.Linq;
+using System.Threading.Tasks;
+
+namespace DateTimeService.Areas.Identity.Models
+{
+    public class ModifyRolesModel
+    {
+        [Required(ErrorMessage = "User Name is required")]
+        public string Username { get; set; }
+        public string[] addRoles { get; set; }
+        public string[] deleteRoles { get; set; }
+    }
+}
